[gd_scene load_steps=7 format=3 uid="uid://d1uq8g60si406"]

[ext_resource type="Script" path="res://scenes/introduction.gd" id="1_j07vu"]
[ext_resource type="Theme" uid="uid://d3y1fl31hgvkx" path="res://assets/ui/random/intro.tres" id="1_wg1wv"]
[ext_resource type="FontFile" uid="uid://delmcjbdhoyya" path="res://assets/font/ChiKareGo2.ttf" id="2_p7dmt"]
[ext_resource type="FontFile" uid="uid://us2eemuwiy4w" path="res://assets/font/Poco.ttf" id="4_yl1ev"]
[ext_resource type="AudioStream" uid="uid://b6hxhmht3to7q" path="res://scenes/beep_sing.mp3" id="5_ucm82"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bykjy"]

[node name="Introduction" type="CanvasLayer"]
script = ExtResource("1_j07vu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="Label2" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -395.0
offset_top = -413.0
offset_right = -105.0
offset_bottom = -362.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_yl1ev")
theme_override_font_sizes/font_size = 31
text = "Press Enter to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -344.0
offset_right = -55.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="IntroContainer"]
layout_mode = 2
theme = ExtResource("1_wg1wv")

[node name="MarginContainer" type="MarginContainer" parent="IntroContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 75

[node name="Panel" type="Panel" parent="IntroContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bykjy")

[node name="HBoxContainer" type="HBoxContainer" parent="IntroContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="IntroContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 33)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.219608, 0.0392157, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_p7dmt")
theme_override_font_sizes/font_size = 34
text = ">"

[node name="Label" type="Label" parent="IntroContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.219608, 0.0392157, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_p7dmt")
theme_override_font_sizes/font_size = 34
text = "Placeholder text"
autowrap_mode = 2
clip_text = true
visible_characters_behavior = 1

[node name="End" type="Label" parent="IntroContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 33)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.219608, 0.0392157, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_p7dmt")
theme_override_font_sizes/font_size = 34
text = "..."

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ucm82")
volume_db = -17.829
autoplay = true
bus = &"Sfx"
parameters/looping = true

[connection signal="visibility_changed" from="Label2" to="." method="_on_label_2_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
